--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,11 +1,16 @@
 @import 'config';
 @import 'home';
+@import 'menu';
+@import 'about';
+@import 'projects';
+@import 'contact';
+@import 'responsive';
 
 body {
     background: $primary-color;
-    color: #fff;
-    height: 100vh; //100%of veiwport
-    font-family: 'Segoe UI, Tahoma, Geneva, Verdana, sana-serif';
+    color: set-text-color($primary-color);
+    height: 100vh;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1;
 }
 
@@ -16,8 +21,12 @@ h3 {
 }
 
 a {
-    color: #fff;
+    color: set-text-color($primary-color);
     text-decoration: none;
+}
+
+.text-secondary {
+    color: $secondary-color;
 }
 
 header {
@@ -38,9 +47,10 @@ main {
 
         a {
             padding: 0.4rem;
+            @include transition-ease;
 
             &:hover {
-                color: $accent -color;
+                color: $secondary-color;
             }
         }
     }
@@ -53,5 +63,5 @@ footer {
     right: 1rem;
     text-align: right;
     padding: 1rem;
-    color: #fff;
+    color: set-text-color($primary-color);
 }
