--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,59 +7,57 @@
 @import 'responsive';
 
 body {
-  background: $primary-color;
-  color: set-text-color($primary-color);
-  height: 100vh;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  line-height: 1;
+    background: $primary-color;
+    color: set-text-color($primary-color);
+    height: 100vh;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 1;
 }
 
-h1, h2, h3 {
-  font-weight: 400;
+h1,
+h2,
+h3 {
+    font-weight: 400;
+}
+
+.nav-link {
+    @include transition-ease;
+
+    &:hover {
+        color: $secondary-color;
+    }
 }
 
 a {
-  color: set-text-color($primary-color);
-  text-decoration: none;
+    color: set-text-color($primary-color);
+    text-decoration: none;
 }
 
 .text-secondary {
-  color: $secondary-color;
+    color: $secondary-color;
 }
 
 header {
-  position: fixed;
-  z-index: 2;
-  width: 100%;
-  padding: 1rem;
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+}
+
+nav {
+    background-blend-mode: overlay;
 }
 
 main {
-  height: 100%;
-  width: 100%;
-
-  .social-icons {
-    position: fixed;
-    bottom: 1rem;
-    left: 1rem;
-
-    a {
-      padding: 0.4rem;
-      @include transition-ease;
-
-      &:hover {
-        color: $secondary-color;
-      }
-    }
-  }
+    height: 100%;
+    width: 100%;
 }
 
 footer {
-  font-size: 1rem;
-  position: fixed;
-  bottom: 0.4rem;
-  right: 1rem;
-  text-align: right;
-  padding: 1rem;
-  color: set-text-color($primary-color);
+    font-size: 1rem;
+    position: fixed;
+    bottom: 0.4rem;
+    left: 1rem;
+    text-align: left;
+    padding: 1rem;
+    color: set-text-color($primary-color);
 }
