--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -11,11 +11,13 @@ $secondary-color:rgb(54, 105, 122);
     transition: all 0.5s ease-in-out;
 }
 
-@mixin typewriter($duration, $delay) {
-    animation: type $duration $delay steps(30, end) forwards,
-        blink .5s step-end infinite;
-    // animation: typewriter 3s steps(25) 1s 1 normal both,
-    // blinkCursor 0.6s steps(12) infinite normal;
+@mixin typewriter($name, $duration, $timing, $delay, $iteration, $direction) {
+    animation-name: $name;
+    animation-duration: $duration;
+    animation-timing-function: $timing;
+    animation-delay: $delay;
+    animation-iteration-count: $iteration;
+    animation-direction: $direction;
 }
 
 @function set-text-color($color) {
