--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,164 +1,77 @@
 @import 'config';
 
 .home {
-    height: 100%;
-    padding-top: 40vh;
+  height: 100%;
+  // padding-top: 40vh;
+  overflow: hidden;
+  text-align: center;
+  background:
+    linear-gradient(to right,
+      rgba($primary-color, 0.1),
+      rgba($primary-color, 0.3)),
+    url('../img/img1.jpg') center;
+  background-size: auto;
+  display: flex;
+  // justify-content: center;
+  align-items: flex-end;
+  height: 100vh;
+
+  &__name {
+    font-size: 3rem;
+    // padding-bottom: 1rem;
+    // margin-bottom: 1rem;
+    border-bottom: 2px solid set-text-color($primary-color);
+  }
+
+  .line {
+    position: relative;
+    width: 295px;
+    white-space: nowrap;
     overflow: hidden;
-    text-align: center;
-    background:
-        linear-gradient(to right,
-            rgba($primary-color, 0.1),
-            rgba($primary-color, 0.3)),
-        url('../img/img1.jpg') center;
-    background-size: auto;
-    display: flex;
-    // justify-content: center;
-    // align-items: center;
-    height: 100vh;
+  }
 
-    &__name {
-        font-size: 3rem;
-        // padding-bottom: 1rem;
-        // margin-bottom: 1rem;
-        border-bottom: 2px solid set-text-color($primary-color);
-    }
+  .curser {
+    border-right: 4px solid #fff;
+  }
 
-    // .line {
-    //     position: relative;
-    //     border-right: 4px solid rgb(0, 255, 64);
-    //     width: 295px;
-    //     white-space: nowrap;
-    //     overflow: hidden;
-    // }
+  .typing1 {
+    animation: typewriter1 3s steps(25) 0.8s 1 normal both,
+      blinkCursor 0.6s steps(12) infinite normal;
+  }
 
-    // .typing {
-    //     @include typewriter();
-    // }
+  .typing2 {
+    animation: typewriter2 3s steps(25) 4s 1 normal both,
+      blinkCursor 0.6s steps(12) infinite normal;
+  }
 
 }
 
-// @keyframes typewriter {
-//     from {
-//         width: 0;
-//     }
-
-//     to {
-//         width: 380px;
-//     }
-// }
-
-// @keyframes blinkCursor {
-//     from {
-//         border-right-color: #fff;
-//     }
-
-//     to {
-//         border-right-color: $secondary-color;
-//     }
-// }
-
-// .typewriter-wrapper {
-//     display: flex;
-// }
-
-// .typewriter-text {
-//     position: relative;
-//     margin: 2rem auto;
-//     white-space: nowrap;
-//     overflow: hidden;
-//     width: 0;
-//     border-right: 1px solid white;
-// }
-
-// .line-1 {
-//     @include typewriter(0.8s, 1);
-// }
-
-// .line-2 {
-//     @include typewriter(0.3s, 2);
-// }
-
-// @keyframes type {
-//     0% {
-//         width: 0;
-//     }
-
-//     100% {
-//         width: 100%;
-//     }
-// }
-
-// @keyframes blink {
-
-//     0%,
-//     100% {
-//         border-color: transparent
-//     }
-
-//     50% {
-//         border-color: white
-//     }
-// }
-
-p {
-    color: lime;
-    font-family: "Courier";
-    font-size: 20px;
-    margin: 10px 0 0 10px;
-    white-space: nowrap;
-    overflow: hidden;
+@keyframes typewriter1 {
+  from {
     width: 0;
-    opacity: 0;
-    animation: type 4s steps(60, end) forwards;
-    -webkit-user-select: none;
-    user-select: none;
   }
-  p:nth-child(2) {
-    animation-delay: 1s;
+
+  to {
+    width: 390px;
   }
-  p:nth-child(3) {
-    animation-delay: 2s;
+}
+
+@keyframes typewriter2 {
+  from {
+    width: 0;
   }
-  p:nth-child(4) {
-    animation-delay: 3s;
+
+  to {
+    width: 425px;
   }
-  p:nth-child(5) {
-    animation-delay: 4s;
+}
+
+@keyframes blinkCursor {
+  from {
+    border-right-color: #fff;
   }
-  p:nth-child(6) {
-    animation-delay: 5s;
-    margin-bottom: 25px;
+
+  to {
+    border-right-color: $secondary-color;
   }
-  p:nth-child(7) {
-    animation-delay: 6s;
-  }
-  p:nth-child(7) span:first-child {
-    animation-duration: 0.8s;
-  }
-  span {
-    animation: blink 1.8s infinite 8s;
-  }
-  p a {
-    color: lime;
-    text-decoration: none;
-  }
-  @keyframes type {
-    0% {
-      opacity: 1;
-    }
-    100% {
-      width: 30em;
-      opacity: 1;
-    }
-  }
-  @keyframes blink {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-  ::selection {
-    background: black;
-  }
+}
