--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -75,3 +75,65 @@
     border-right-color: $secondary-color;
   }
 }
+
+// MEDIUM LAYOUT
+/*
+.home {
+    height: 100%;
+    padding-top: 40vh;
+    overflow: hidden;
+    align-items: center;
+    text-align: center;
+    background:
+        linear-gradient(to right,
+            rgba($primary-color, 0.1),
+            rgba($primary-color, 0.3)),
+        url('../img/img1.jpg') center top;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+
+    &__name {
+        font-size: 4rem;
+        padding-bottom: 1rem;
+        margin-bottom: 1rem;
+        border-bottom: 2px solid set-text-color($primary-color);
+    }
+
+    .line {
+        position: relative;
+        border-right: 4px solid rgb(0, 255, 64);
+        width: 295px;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+
+    .typing {
+        animation: typewriter 3s steps(25) 1s 1 normal both,
+            blinkCursor 0.6s steps(12) infinite normal;
+    }
+
+}
+
+@keyframes typewriter {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 445px;
+    }
+}
+
+@keyframes blinkCursor {
+    from {
+        border-right-color: #fff;
+    }
+
+    to {
+        border-right-color: $secondary-color;
+    }
+}
+*/
