--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -30,6 +30,12 @@ $secondary-color:rgb(54, 105, 122);
     }
 }
 
+@mixin media-sm{
+    @media screen and (min-width: 576px) {
+        @content;
+    }
+}
+
 @mixin media-md {
     @media screen and (min-width: 768px) {
         @content;
@@ -37,13 +43,13 @@ $secondary-color:rgb(54, 105, 122);
 }
 
 @mixin media-lg {
-    @media screen and (min-width: 1024px) {
+    @media screen and (min-width: 992px) {
         @content;
     }
 }
 
 @mixin media-xl {
-    @media screen and (min-width: 1600px) {
+    @media screen and (min-width: 1200px) {
         @content;
     }
 }
