--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -30,8 +30,14 @@ $secondary-color:rgb(54, 105, 122);
     }
 }
 
+@mixin media-xsm {
+    @media screen and (min-width: 1px) {
+        @content;
+    }
+}
+
 @mixin media-sm {
-    @media screen and (min-width: 576px) {
+    @media screen and (min-width: 458px) {
         @content;
     }
 }
