--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -2,7 +2,7 @@
     padding-bottom: 2rem;
 
     &__bio-image {
-        height: 30vh;
+        height: 40vh;
         width: 100%;
         background:
             linear-gradient(to right,
@@ -15,10 +15,22 @@
         align-items: center;
         justify-content: center;
 
-        .text-secondary {
-            color: $primary-color;
-            font-size: 3rem;
+        p {
             margin-bottom: 2rem;
+        }
+    }
+
+    &__bio {
+        padding-top: 4rem;
+        width: 80%;
+        text-align: center;
+
+        hr {
+            border: 2px solid $secondary-color;
+        }
+
+        .h2 {
+            padding-bottom: 1rem;
         }
     }
 
@@ -36,8 +48,10 @@
         overflow: hidden;
         cursor: pointer;
 
+
         img {
             width: 100%;
+            object-fit: fill;
         }
 
         &::after {
@@ -96,4 +110,82 @@
             rotate(90deg) translate(-3rem, -5rem);
     }
 
+}
+
+.python1__replit {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    visibility: hidden;
+
+    &.open {
+        visibility: visible;
+        z-index: 100;
+    }
+
+    .replit1__inner {
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        width: 100vw;
+        overflow: hidden;
+        padding: 1rem 1rem;
+        background: rgba($primary-color, 0.85);
+        list-style-type: none;
+
+        transform: translateY(-100%);
+        @include transition-ease;
+
+        &.open {
+            transform: translateY(0);
+            z-index: 200;
+        }
+
+        &__frame {
+            opacity: 1;
+            z-index: 300;
+        }
+    }
+}
+
+.python2__replit {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    visibility: hidden;
+
+    &.open {
+        visibility: visible;
+        z-index: 100;
+    }
+
+    .replit2__inner {
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        width: 100vw;
+        overflow: hidden;
+        padding: 1rem 1rem;
+        background: rgba($primary-color, 0.85);
+        list-style-type: none;
+
+        transform: translateY(-100%);
+        @include transition-ease;
+
+        &.open {
+            transform: translateY(0);
+            z-index: 200;
+        }
+
+        &__frame {
+            opacity: 1;
+            z-index: 300;
+        }
+    }
 }
