--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -235,7 +235,15 @@
     }
 
     .about__bio {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
+    }
+
+    .education__bio {
+        font-size: 1.2rem;
+    }
+
+    .projects__bio {
+        font-size: 1.2rem;
     }
 
     .projects {
@@ -270,7 +278,4 @@
         grid-template-columns: repeat(3, 1fr);
     }
 
-    .projects__bio-image {
-        height: 50vh;
-    }
 }
