--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,10 +1,10 @@
 .contact {
     height: 100%;
-    padding-top: 40vh;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 10vh;
     background:
         linear-gradient(to right,
             rgba($primary-color, 0.9),
@@ -13,8 +13,22 @@
     background-size: cover;
 
     h2 {
-        font-size: 3rem;
+        font-size: 2rem;
         margin-bottom: 2rem;
+    }
+
+    h4{
+        display: inline;
+        font-size: 1.5rem;
+    }
+
+    a{
+        font-size: 1.5rem;
+        
+    }
+
+    .text-secondary{
+        font-size: 1rem;
     }
 
     &__list {
