--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -14,14 +14,10 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-
-        p {
-            margin-bottom: 2rem;
-        }
     }
 
     &__bio {
-        width: 80%;
+        width: 70vw;
         text-align: center;
         padding-top: 4rem;
 
@@ -29,8 +25,14 @@
             border: 2px solid $secondary-color;
         }
 
-        .h2 {
+        h2 {
             padding-bottom: 1rem;
+            font-size: 1.5rem;
+        }
+
+        p {
+            padding-bottom: 1rem;
+            font-size: 1rem;
         }
     }
 
@@ -70,18 +72,16 @@
                 }
             }
 
-            &__labels{
+            &__labels {
                 display: flex;
                 flex-direction: row;
                 justify-content: flex-start;
                 flex-flow: wrap;
+
                 h6 {
                     padding: 0.6rem;
                     border: 1px solid $secondary-color;
                     margin: 0.6rem;
-                    // justify-content: flex-start;
-
-
                 }
             }
         }
