--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -17,22 +17,21 @@
     }
 
     &__bio {
-        width: 70vw;
+        width: 80vw;
         text-align: center;
-        padding-top: 4rem;
 
         hr {
             border: 2px solid $secondary-color;
         }
 
         h2 {
-            padding-bottom: 1rem;
-            font-size: 1.5rem;
+
+            font-size: 2rem;
         }
 
         p {
-            padding-bottom: 1rem;
             font-size: 1rem;
+            margin-bottom: 0;
         }
     }
 
