--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,43 +1,56 @@
 .home {
-  height: 100%;
   overflow: hidden;
-  text-align: center;
   background:
     linear-gradient(to right,
       rgba($primary-color, 0.1),
       rgba($primary-color, 0.3)),
     url('../img/img1.jpg') center;
   background-size: auto;
-  display: flex;
-  align-items: flex-start;
   height: 100vh;
 
-  &__name {
-    font-size: 3rem;
-    border-bottom: 2px solid set-text-color($primary-color);
+  #smTitle {
+    display: inline-grid;
   }
 
-  .line {
-    position: relative;
-    width: 295px;
-    white-space: nowrap;
-    overflow: hidden;
+  &__top {
+    margin-top: 4rem;
+    margin-left: 2rem;
+    display: inline-grid;
+    grid-template-columns: auto;
+    grid-gap: 0.5rem;
+    font-size: 1.5rem;
+
+    .name {
+      font-size: 2rem;
+      border-bottom: 2px solid set-text-color($primary-color);
+    }
+
+    .line {
+      position: relative;
+      width: 80%;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+
+    .curser {
+      border-right: 4px solid #fff;
+    }
+
+    .typing1 {
+      animation: typewriter1 3s steps(25) 1.5s 1 normal both,
+        blinkCursor 0.6s steps(12) infinite normal;
+    }
+
+    .typing2 {
+      animation: typewriter2 3s steps(25) 4.7s 1 normal both,
+        blinkCursor 0.6s steps(12) infinite normal;
+    }
+
   }
 
-  .curser {
-    border-right: 4px solid #fff;
+  #lgTitle {
+    display: none;
   }
-
-  .typing1 {
-    animation: typewriter1 3s steps(25) 1.5s 1 normal both,
-      blinkCursor 0.6s steps(12) infinite normal;
-  }
-
-  .typing2 {
-    animation: typewriter2 3s steps(25) 4.7s 1 normal both,
-      blinkCursor 0.6s steps(12) infinite normal;
-  }
-
 }
 
 @keyframes typewriter1 {
@@ -46,7 +59,7 @@
   }
 
   to {
-    width: 390px;
+    width: 100%;
   }
 }
 
@@ -56,7 +69,7 @@
   }
 
   to {
-    width: 425px;
+    width: 100%;
   }
 }
 
