--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,79 +1,47 @@
-@include media-xsm {
+@include media-sm {
 
     .home {
-        height: 100%;
-        overflow: hidden;
-        text-align: center;
-        background:
-            linear-gradient(to right,
-                rgba($primary-color, 0.1),
-                rgba($primary-color, 0.3)),
-            url('../img/img1.jpg') center;
-        background-size: auto;
-        display: flex;
-        align-items: flex-start;
-        height: 100vh;
 
-        &__name {
-            font-size: 1.5rem;
-            border-bottom: 2px solid set-text-color($primary-color);
+        &__top {
+            margin-top: 4rem;
+            margin-left: 2rem;
+            display: inline-grid;
+            grid-template-columns: auto;
+            grid-gap: 0.5rem;
+
+
+            .name {
+                font-size: 2.8rem;
+                border-bottom: 2px solid set-text-color($primary-color);
+            }
+
+            .line {
+                position: relative;
+                width: 80%;
+                white-space: nowrap;
+                overflow: hidden;
+            }
+
+            .curser {
+                border-right: 4px solid #fff;
+            }
+
+            .typing1 {
+                animation: typewriter1 3s steps(25) 1.5s 1 normal both,
+                    blinkCursor 0.6s steps(12) infinite normal;
+            }
+
+            .typing2 {
+                animation: typewriter2 3s steps(25) 4.7s 1 normal both,
+                    blinkCursor 0.6s steps(12) infinite normal;
+            }
+
         }
 
-        .line {
-            position: relative;
-            width: 295px;
-            white-space: nowrap;
-            overflow: hidden;
-        }
-
-        .curser {
-            border-right: 3px solid #fff;
-        }
-
-        .typing1 {
-            animation: typewriter1 3s steps(25) 2s 1 normal both,
-                blinkCursor 0.6s steps(12) infinite normal;
-        }
-
-        .typing2 {
-            animation: typewriter2 3s steps(25) 6s 1 normal both,
-                blinkCursor 0.6s steps(12) infinite normal;
-        }
-
-    }
-
-    @keyframes typewriter1 {
-        from {
-            width: 0;
-        }
-
-        to {
-            width: 290px;
+        #lgTitle {
+            visibility: hidden;
         }
     }
-
-    @keyframes typewriter2 {
-        from {
-            width: 0;
-        }
-
-        to {
-            width: 250px;
-        }
-    }
-
-    @keyframes blinkCursor {
-        from {
-            border-right-color: #fff;
-        }
-
-        to {
-            border-right-color: $secondary-color;
-        }
-    }
-}
-
-@include media-sm {
 
     .about__bio {
         width: 60vw;
@@ -157,78 +125,6 @@
         }
     }
 
-    .home {
-        height: 100%;
-        overflow: hidden;
-        text-align: center;
-        background:
-            linear-gradient(to right,
-                rgba($primary-color, 0.1),
-                rgba($primary-color, 0.3)),
-            url('../img/img1.jpg') center;
-        background-size: auto;
-        display: flex;
-        align-items: flex-start;
-        height: 100vh;
-
-        &__name {
-            font-size: 3rem;
-            border-bottom: 2px solid set-text-color($primary-color);
-        }
-
-        .line {
-            position: relative;
-            width: 295px;
-            white-space: nowrap;
-            overflow: hidden;
-        }
-
-        .curser {
-            border-right: 4px solid #fff;
-        }
-
-        .typing1 {
-            animation: typewriter1 3s steps(25) 2s 1 normal both,
-                blinkCursor 0.6s steps(12) infinite normal;
-        }
-
-        .typing2 {
-            animation: typewriter2 3s steps(25) 6s 1 normal both,
-                blinkCursor 0.6s steps(12) infinite normal;
-        }
-
-    }
-
-    @keyframes typewriter1 {
-        from {
-            width: 0;
-        }
-
-        to {
-            width: 385px;
-        }
-    }
-
-    @keyframes typewriter2 {
-        from {
-            width: 0;
-        }
-
-        to {
-            width: 328px;
-        }
-    }
-
-    @keyframes blinkCursor {
-        from {
-            border-right-color: #fff;
-        }
-
-        to {
-            border-right-color: $secondary-color;
-        }
-    }
-
     .schools {
 
         &__cert {
@@ -284,9 +180,7 @@
         }
     }
 
-    #projects__sm {
-        display: none;
-    }
+
 
     .projects__btns {
         top: 0;
@@ -314,63 +208,23 @@
     }
 
     .home {
-        height: 100%;
-        padding-top: 40vh;
-        overflow: hidden;
-        align-items: center;
-        text-align: center;
         background:
             linear-gradient(to right,
                 rgba($primary-color, 0.1),
                 rgba($primary-color, 0.3)),
             url('../img/img1.jpg') center top;
         background-size: cover;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         height: 100vh;
 
-        &__name {
-            font-size: 3rem;
-            padding-bottom: 1rem;
-            margin-bottom: 1rem;
-            border-bottom: 2px solid set-text-color($primary-color);
+        #smTitle {
+            display: none;
         }
 
-        .line {
-            position: relative;
-            border-right: 4px solid rgb(0, 255, 64);
-            width: 295px;
-            white-space: nowrap;
-            overflow: hidden;
-        }
-
-        .typing {
-            animation: typewriter 3s steps(25) 2s 1 normal both,
-                blinkCursor 0.6s steps(12) infinite normal;
-        }
-
-    }
-
-    @keyframes typewriter {
-        from {
-            width: 0;
-        }
-
-        to {
-            width: 390px;
+        #lgTitle {
+            display: inline-grid !important;
         }
     }
 
-    @keyframes blinkCursor {
-        from {
-            border-right-color: #fff;
-        }
-
-        to {
-            border-right-color: $secondary-color;
-        }
-    }
 
     .schools {
 
@@ -392,64 +246,64 @@
 
 @include media-lg {
 
-    .home {
-        height: 100%;
-        padding-top: 40vh;
-        overflow: hidden;
-        align-items: center;
-        text-align: center;
-        background:
-            linear-gradient(to right,
-                rgba($primary-color, 0.1),
-                rgba($primary-color, 0.3)),
-            url('../img/img1.jpg') center top;
-        background-size: cover;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
+    // .home {
+    //     height: 100%;
+    //     padding-top: 40vh;
+    //     overflow: hidden;
+    //     align-items: center;
+    //     text-align: center;
+    //     background:
+    //         linear-gradient(to right,
+    //             rgba($primary-color, 0.1),
+    //             rgba($primary-color, 0.3)),
+    //         url('../img/img1.jpg') center top;
+    //     background-size: cover;
+    //     display: flex;
+    //     justify-content: center;
+    //     align-items: center;
+    //     height: 100vh;
 
-        &__name {
-            font-size: 4rem;
-            padding-bottom: 1rem;
-            margin-bottom: 1rem;
-            border-bottom: 2px solid set-text-color($primary-color);
-        }
+    //     &__name {
+    //         font-size: 4rem;
+    //         padding-bottom: 1rem;
+    //         margin-bottom: 1rem;
+    //         border-bottom: 2px solid set-text-color($primary-color);
+    //     }
 
-        .line {
-            position: relative;
-            border-right: 4px solid rgb(0, 255, 64);
-            width: 295px;
-            white-space: nowrap;
-            overflow: hidden;
-        }
+    //     .line {
+    //         position: relative;
+    //         border-right: 4px solid rgb(0, 255, 64);
+    //         width: 295px;
+    //         white-space: nowrap;
+    //         overflow: hidden;
+    //     }
 
-        .typing {
-            animation: typewriter 3s steps(25) 1s 1 normal both,
-                blinkCursor 0.6s steps(12) infinite normal;
-        }
+    //     .typing {
+    //         animation: typewriter 3s steps(25) 1s 1 normal both,
+    //             blinkCursor 0.6s steps(12) infinite normal;
+    //     }
 
-    }
+    // }
 
-    @keyframes typewriter {
-        from {
-            width: 0;
-        }
+    // @keyframes typewriter {
+    //     from {
+    //         width: 0;
+    //     }
 
-        to {
-            width: 515px;
-        }
-    }
+    //     to {
+    //         width: 515px;
+    //     }
+    // }
 
-    @keyframes blinkCursor {
-        from {
-            border-right-color: #fff;
-        }
+    // @keyframes blinkCursor {
+    //     from {
+    //         border-right-color: #fff;
+    //     }
 
-        to {
-            border-right-color: $secondary-color;
-        }
-    }
+    //     to {
+    //         border-right-color: $secondary-color;
+    //     }
+    // }
 
     .schools {
 
