--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -208,20 +208,70 @@
     }
 
     .home {
+        height: 100%;
+        padding-top: 50vh;
+        overflow: hidden;
+        align-items: center;
+       
         background:
             linear-gradient(to right,
                 rgba($primary-color, 0.1),
                 rgba($primary-color, 0.3)),
             url('../img/img1.jpg') center top;
         background-size: cover;
+        display: flex;
+        justify-content: flex-start;
         height: 100vh;
+        padding-left: 5rem;
 
         #smTitle {
             display: none;
         }
 
         #lgTitle {
-            display: inline-grid !important;
+            visibility: visible;
+        }
+
+        &__name {
+            
+            font-size: 5rem;
+            padding-bottom: 1rem;
+            margin-bottom: 1rem;
+            border-bottom: 2px solid set-text-color($primary-color);
+        }
+
+        .line {
+            position: relative;
+            border-right: 4px solid rgb(0, 255, 64);
+            width: 295px;
+            white-space: nowrap;
+            overflow: hidden;
+        }
+
+        .typing {
+            animation: typewriter 3s steps(25) 2s 1 normal both,
+                blinkCursor 0.6s steps(12) infinite normal;
+        }
+
+    }
+
+    @keyframes typewriter {
+        from {
+            width: 0;
+        }
+
+        to {
+            width: 100%;
+        }
+    }
+
+    @keyframes blinkCursor {
+        from {
+            border-right-color: #fff;
+        }
+
+        to {
+            border-right-color: $secondary-color;
         }
     }
 
