--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -144,6 +144,10 @@
 
 @include media-md {
 
+    #projects__sm {
+        display: none;
+    }
+
     .about__bio {
         width: 60vw;
 
@@ -212,7 +216,7 @@
         padding-top: 50vh;
         overflow: hidden;
         align-items: center;
-       
+
         background:
             linear-gradient(to right,
                 rgba($primary-color, 0.1),
@@ -233,7 +237,7 @@
         }
 
         &__name {
-            
+
             font-size: 5rem;
             padding-bottom: 1rem;
             margin-bottom: 1rem;
@@ -296,69 +300,12 @@
 
 @include media-lg {
 
-    // .home {
-    //     height: 100%;
-    //     padding-top: 40vh;
-    //     overflow: hidden;
-    //     align-items: center;
-    //     text-align: center;
-    //     background:
-    //         linear-gradient(to right,
-    //             rgba($primary-color, 0.1),
-    //             rgba($primary-color, 0.3)),
-    //         url('../img/img1.jpg') center top;
-    //     background-size: cover;
-    //     display: flex;
-    //     justify-content: center;
-    //     align-items: center;
-    //     height: 100vh;
-
-    //     &__name {
-    //         font-size: 4rem;
-    //         padding-bottom: 1rem;
-    //         margin-bottom: 1rem;
-    //         border-bottom: 2px solid set-text-color($primary-color);
-    //     }
-
-    //     .line {
-    //         position: relative;
-    //         border-right: 4px solid rgb(0, 255, 64);
-    //         width: 295px;
-    //         white-space: nowrap;
-    //         overflow: hidden;
-    //     }
-
-    //     .typing {
-    //         animation: typewriter 3s steps(25) 1s 1 normal both,
-    //             blinkCursor 0.6s steps(12) infinite normal;
-    //     }
-
-    // }
-
-    // @keyframes typewriter {
-    //     from {
-    //         width: 0;
-    //     }
-
-    //     to {
-    //         width: 515px;
-    //     }
-    // }
-
-    // @keyframes blinkCursor {
-    //     from {
-    //         border-right-color: #fff;
-    //     }
-
-    //     to {
-    //         border-right-color: $secondary-color;
-    //     }
-    // }
+    
 
     .schools {
 
         &__cert {
-            width: 50vw !important;
+            // width: 50vw !important;
 
             h2,
             h3 {
