--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -238,7 +238,7 @@
 
         &__name {
 
-            font-size: 4rem;
+            font-size: 3.5rem;
             padding-bottom: 1rem;
             margin-bottom: 1rem;
             border-bottom: 2px solid set-text-color($primary-color);
@@ -300,7 +300,12 @@
 
 @include media-lg {
 
+    .home {
 
+        &__name {
+            font-size: 4.5rem;
+        }
+    }
 
     .schools {
 
